--- a/Martin+Evelyne/assets/css/main.css
+++ b/Martin+Evelyne/assets/css/main.css
@@ -2492,7 +2492,8 @@ input, select, textarea {
 			top: 0;
 			background-image: url("images/overlay.png");
 			width: 100%;
-			height: 100%;
+			height: 10
+			0%;
 			z-index: 1;
 		}
 
@@ -3455,7 +3456,7 @@ input, select, textarea {
 			display: inline-block;
 			margin-right: 1%;
 			max-width: 95%;
-			padding: 6em;
+			padding: 3em;
 			position: relative;
 			text-align: right;
 			vertical-align: middle;
@@ -3473,17 +3474,17 @@ input, select, textarea {
 				}
 
 				#banner .content header p {
-					margin: 1em 0 0 0;
+					margin: 0.5em 0 0 0;
 					top: 0;
 				}
 
 			#banner .content .image {
 				border-radius: 100%;
 				display: inline-block;
-				height: 19em;
+				height: 15em;
 				margin-left: 3em;
 				vertical-align: middle;
-				width: 14em;
+				width: 15em;
 			}
 
 				#banner .content .image img {
